Bug 463124 - Kalendar DAV Server Authentication dialogue not focusable/interactible
Summary: Kalendar DAV Server Authentication dialogue not focusable/interactible
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 463151 463432 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-12-16 16:12 UTC by Deckweiss75
Modified: 2023-01-02 00:39 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Deckweiss75 2022-12-16 16:12:59 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

When trying to create a WebDAV calendar source which is hosted on a local server with a self signed SSL certificate, there is a Server Authentication dialogue popup, which can not be interacted with, which results in not being able to finish the setup. Same in KOrganizer. Will try with new user and update this issue later.

See video: https://www.youtube.com/watch?v=t3H6OUySCfQ

STEPS TO REPRODUCE
1. Open Kalendar / KOrganizer
2. Add DAV calendar source
3. Configure server IP with a local server with selfsigned SSL certificate

OBSERVED RESULT

Dialogue pops up behind other windows and can not be focused or interacted with

EXPECTED RESULT

Dialogue pops up in front of other windows and can be focused and interacted with


SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7
Kernel Version: 6.0.12-zen1-1-zen (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 5800X 8-Core Processor
Memory: 31,3 GiB of RAM
Graphics Processor: AMD Radeon RX 6600 XT

ADDITIONAL INFORMATION
Comment 1 Deckweiss75 2022-12-16 16:19:30 UTC
Tried with a new user - same issue - the dialogue is not focusable/interactable

Also tried using window rules to force focus protection and force focus, without any change in behaviour.
Comment 2 Nicolas Fella 2022-12-16 16:36:30 UTC
Probably the same root cause as https://bugs.kde.org/show_bug.cgi?id=452593
Comment 3 Deckweiss75 2022-12-16 21:19:15 UTC
https://invent.kde.org/frameworks/knewstuff/-/merge_requests/202

I think this is the relevant fix, but I can't tell whether it has not been released yet? 

Cause I am on KDE Frameworks Version: 5.101.0
Comment 4 Nicolas Fella 2022-12-16 22:45:30 UTC
I'm not saying it should be fixed by this, I'm just saying that I think it's a similar issues and thus requires a similar fix
Comment 5 Nicolas Fella 2022-12-17 12:14:44 UTC
*** Bug 463151 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2022-12-17 14:08:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1083
Comment 7 Nicolas Fella 2022-12-24 15:43:40 UTC
*** Bug 463432 has been marked as a duplicate of this bug. ***
Comment 8 beatlink+kdebugs 2022-12-25 05:08:24 UTC
Is there an update on this bug? It has made KOrganizer and Kontact completely unusable for me.
Comment 9 Deckweiss75 2022-12-27 01:37:23 UTC
I am not quite sure how it happened, but in my frustration, I wanted to try every tool available and it happened that I was able to work around this bug. 

1. I installed the akonadiconsole package from the arch linux repos.
2. Through it I attempted to add a dav source again. 
3. I entered my credentials and selected to configure the url manually
4. I clicked "search" server configuration
5. I entered my direct dav url https://192.168.1.50/remote.php/dav
6. The SSL popup popped up behind all the windows
7. When I closed the configuration windows, the popup did not vanish and I was able to select to accept the unsafe certificate for ever
Comment 10 Nicolas Fella 2023-01-02 00:39:11 UTC
Git commit 7e6acd808ceda85841af122e4f0fe00d98cdf181 by Nicolas Fella.
Committed on 01/01/2023 at 23:02.
Pushed by nicolasfella into branch 'master'.

[WidgetsAskUserActionHandler] Add fallbacks for dialog parent windows

requestUserMessageBox may be called without a parent widget, e.g. because it is called from KIOCore where we don't have that information

Apply the same logic we have for other functions

This ensures that message boxes triggered from workers have a parent window

M  +24   -4    src/widgets/widgetsaskuseractionhandler.cpp

https://invent.kde.org/frameworks/kio/commit/7e6acd808ceda85841af122e4f0fe00d98cdf181