[WidgetsAskUserActionHandler] Add fallbacks for dialog parent windows

requestUserMessageBox may be called without a parent widget, e.g. because it is called from KIOCore where we don't have that information

Apply the same logic we have for other functions

This ensures that message boxes triggered from workers have a parent window

BUG: 463124